--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="keywords" content="bilal karim, branding, canada, cartographer, design, geospatial technologist, graphic designer, heat energy assessment technologies, HEAT, identity, marketing, poster design, the prophec, web design, web developer" />
 <meta name="description" content="A visual showcase featuring selected works by Bilal Karim." />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+<meta name="google-site-verification" content="rzQnLFUiheT_eHRb8vB66p_xRxhc3RlWzUQeZRlS7_U" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="apple-mobile-web-app-title" content="XEENAT">
