--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<script>window.location.replace("http://bilalkarim.com");</script>
+<html>
+  <head>
+    <meta name="google-site-verification" content="rzQnLFUiheT_eHRb8vB66p_xRxhc3RlWzUQeZRlS7_U" />
+  </head>
+  <body>hi</body>
+</html>
