--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<html>
-  <head>
-    <meta name="google-site-verification" content="rzQnLFUiheT_eHRb8vB66p_xRxhc3RlWzUQeZRlS7_U" />
-  </head>
-  <body>hi</body>
-</html>
+<script>window.location.replace("http://bilalkarim.com");</script>
